[package]
name = "decode-starknet-calldata"
version = "0.1.2"
edition = "2021"
description = "Decode Starknet calldata"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigdecimal = "0.4.2"
starknet = "0.9.0"
thiserror = "1.0.56"
